<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/solicitudNueva"

            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_mi_solicitud"

            android:title="Mis Solicitudes" />
        <item
            android:id="@+id/donantesFiltros"

            android:title="Buscar Donantes" />
        <item
            android:id="@+id/informacion"

            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_centros"

            android:title="Ver centros de donación" />
        <item
            android:id="@+id/perfil"

            android:title="Perfil de Usuario" />
    </group>
</menu>