<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="264dp"
            android:layout_height="107dp"
            app:srcCompat="@drawable/perfil"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar Perfil"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Datos personales"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/titlePerfilEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilEmail"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPerfilEmail"
                android:hint="@string/prompt_registro_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilTelefono"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilTelefono"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPerfilTelefono"
                android:hint="@string/prompt_registro_telefono"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilContrasena"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Contraseña:"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPerfilContrasena"
                android:hint="@string/prompt_contrasena"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPerfilConfirmarContrasena"
                    android:hint="@string/prompt_contrasena_confirmacion"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
</LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/boton_perfil_aplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_aplicar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/boton_perfil_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_cancelar" />


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>