<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/yodono_logo_sin_borde"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/texto_bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/bienvenida"
            android:textSize="20dp" />

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <!--android:layout_marginTop="20dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:autoPlay="true"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boton_inicio_sesion"
                android:text="@string/inicio_sesion" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boton_registro"
                android:text="@string/registro" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>