<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="264dp"
            android:layout_height="107dp"
            app:srcCompat="@drawable/perfil"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mi Perfil"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Datos personales"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Datos perfil -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/titlePerfilCedula"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/titlePerfilCedula"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/PerfilCedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="1234567-8"
            android:textSize="20sp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/titlePerfilNombre"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/titlePerfilNombre"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/PerfilNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="Juan Pedro"
            android:textSize="20sp"/>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilApellido"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilApellido"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/PerfilApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="Perez Rodriguez"
                android:textSize="20sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilDepartamento"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilDepartamento"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/PerfilDepartamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="Montevideo"
                android:textSize="20sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilGrupo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilGrupo"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/PerfilGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="A+"
                android:textSize="20sp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilEmail"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/PerfilEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="juanpedroperez@gmail.com"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titlePerfilTelefono"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titlePerfilTelefono"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/PerfilTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="091234567"
                android:textSize="20sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/titleDisponible"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Disponible para donar"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/boton_perfil_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_editar" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>